--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <p><img alt="" src="http://nhdz.ml/img/12.png"/></p>
 
-<p>注意是 <code>_key</code> 后面的值一直到 <code>&amp;</code> 结束,长为 <strong>112</strong></p>
+<p>注意是 <code>_key</code> 后面的值一直到第一个 <code>&amp;</code> 结束,长为 <strong>112</strong></p>
 
 <p>再将我打马赛克的部分复制出来即可</p>
 
@@ -64,4 +64,4 @@
 
 <h2>PS</h2>
 
-<p>key 值只要葫芦侠没有注销重新登陆，是一直不会改变的，所以记下来以后可以使用</p>
+<p>key 值只要葫芦侠没有注销重新登陆，是一直不会改变的，所以记下来以后可以长期使用</p>
