--- a/index.html
+++ b/index.html
@@ -64,6 +64,6 @@
 
 <h2>PS</h2>
 
-<p>因为是按版块顺序来签到的，所以签到过程中可能会等待大概1分钟的时间</p>
+<p>因为是按版块顺序依次签到的，所以签到过程中可能会等待大概1分钟的时间</p>
 
-<p>key 值只要葫芦侠没有注销重新登陆，是一直不会改变的，所以记下来以后可以长期使用</p>
+<p><code>key</code> 值只要葫芦侠没有注销重新登陆，是不会改变的，所以记下来以后可以每天用该<code>key</code>来签到</p>
