--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <p><img src="http://nhdz.ml/img/11.png" alt="" /></p>
 <h4>我打马赛克的部分就是我的 <code>key</code></h4>
 <p><img src="http://nhdz.ml/img/12.png" alt="" /></p>
-<h4>注意是 <code>_key</code> 后面的值一直到 <code>&amp;</code> 结束,长为 <strong>112</strong></h4>
+<h4>注意是 <code>_key=</code> 后面的值一直到 <code>&amp;</code> 结束,长为 <strong>112</strong></h4>
 <h4>再将我打马赛克的部分复制出来即可</h4>
 <h4>访问 <a href="http://xiao-xi.tk/">http://xiao-xi.tk/</a></h4>
 <p><img src="http://nhdz.ml/img/13.png" alt="" /></p>
