--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 <h4>签到成功截图</h4>
 <p><img src="http://nhdz.ml/img/14.png" alt="" /></p>
 <h2>PS</h2>
-<h4>因为是按版块顺序依次签到的，所以签到过程中可能会等待大概1分钟的时间</h4>
+<h4>因为是按版块顺序依次签到的，所以签到过程中可能会等待大概30秒的时间</h4>
+<h4>没有一秒完成所有版块签到是为了账号的安全着想</h4>
 <h4><code>key</code> 值只要葫芦侠没有注销重新登陆，是不会改变的，所以记下来以后可以每天用该 <code>key</code> 来签到</h4>
 
         <!-- Use style in style3-->
